# opickle

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  dune-project  opickle.opam
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ocaml-images.yml
lib/: dune  error.ml  opcode.ml  opickle.ml  src.ml  unpickler.ml  value.ml
test/: dump.t  dune  genpickle.py  opickle_test.ml  python_vectors.t  src_test.ml  unpickler_test.ml  value_test.ml
